# pycon-video-voting

./: .gitignore  Makefile  Procfile  README.md  README.rst  app.yaml  index.yaml  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_graph.txt
app/: controller.py  events.csv  model.py
app/templates/: index.html  vote_board.html
open_spaces/: admin.py  apps.py  models.py  urls.py  views.py
open_spaces/data/: open_spaces.json
open_spaces/migrations/: 0001_initial.py
open_spaces/templates/open_spaces/: board.html  new_space.html  space.html
pycon_video_voting/: asgi.py  urls.py  wsgi.py
pycon_video_voting/settings/: common.py  development.py  production.py
pycon_video_voting/templates/: base.html
static/css/: main.css
tests/: test_pycon_video_voting.py
vote/: admin.py  models.py  urls.py  views.py
vote/data/: pycon_data.csv  vote.json
vote/migrations/: 0001_initial.py  0002_auto_20200511_0010.py
vote/templates/vote/: events.html  index.html  vote_board.html  voting_closed.html
