[tool.poetry]
name = "pycon_video_voting"
version = "0.2.0"
description = ""
authors = ["Glen Jarvis <<glen@glenjarvis.com>>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wheel = "^0.34.2"
django = "^3.0.6"
gunicorn = "^20.0.4"
psycopg2 = "^2.8.5"
whitenoise = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
